[package]
name = "generic_image_steganography"
version = "0.2.1"
authors = ["jokrey <justin.bennett.developer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jokrey_utilities = { path = "../jokrey_utilities" }
base64 = "~0.6.0"
image = "0.23.4"
threadpool = "1.7.1"
minifb = "0.16"
rand = "0.7.3"
reqwest = { version = "0.10.6", features = ["blocking"] }
ndarray = "0.13.1"