[package]
name = "generic_image_steganography"
version = "0.2.2"
authors = ["jokrey"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jokrey_utilities = { path = "../jokrey_utilities" }
base64 = "0.21.5"
image = "0.24.7"
threadpool = "1.7.1"
minifb = "0.25.0"
rand = "0.8.5"
reqwest = { version = "0.11.23", features = ["blocking"] }
ndarray = "0.15.6"